fix: overflow going below textarea

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,3 +105,15 @@ ol ol, ul ol {
    list-style-type: lower-latin;
    margin-left: 15px; 
 }
+
+::-webkit-scrollbar {
+  width: 0.3rem;
+  height: 0.3rem;
+}
+::-webkit-scrollbar-track {
+  background: #23232300;
+}
+::-webkit-scrollbar-thumb {
+  background: #6c6c6c;
+  border-radius: 4px;
+}
